# fnbr-shopwatcher

./: .gitignore  Cargo.toml  README.md  log.txt  shopwatcher.toml.example
src/: log.txt  main.rs
