[package]
name = "feed2cord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"feed-rs" = "1.0"
"ureq" = { version = "2.4.0", features = ["json"] }
"toml" = "0.5.9"
"serde_derive" = "1.0"
"serde" = "1.0"
